// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v-on should be built as an option 1`] = `
"createVNode(\\"p\\", {
  \\"onClick\\": {
    \\"handler\\": handler,
    \\"options\\": {
      \\"passive\\": true
    }
  }
});"
`;

exports[`v-on should normalize click.middle 1`] = `
"createVNode(\\"p\\", {
  \\"onMouseup\\": withModifiers(handler, [\\"middle\\"])
});"
`;

exports[`v-on should normalize click.right 1`] = `
"createVNode(\\"p\\", {
  \\"onContextmenu\\": withModifiers(handler, [\\"right\\"])
});"
`;

exports[`v-on should use the \`mergeProps\` helper function 1`] = `
"createVNode(\\"p\\", mergeProps({
  \\"a\\": \\"b\\"
}, toHandlers(obj), {
  \\"c\\": 'd'
}, { ...$props
}));"
`;

exports[`v-on should use the \`toHandlers\` helper function 1`] = `"createVNode(\\"p\\", toHandlers(obj));"`;

exports[`v-on should use withKeys 1`] = `
"createVNode(\\"p\\", {
  \\"onKeyup\\": withKeys(handler, [\\"esc\\"])
});"
`;

exports[`v-on v-on with arguments 1`] = `
"createVNode(\\"p\\", {
  \\"onClick\\": handler
});"
`;

exports[`v-on v-on with modifiers 1`] = `
"createVNode(\\"p\\", {
  \\"onClick\\": withModifiers(handler, [\\"stop\\", \\"prevent\\"])
});"
`;
